--- a/.env
+++ b/.env
@@ -20,10 +20,6 @@ APP_SECRET=4c983839ebaf1a907c640bfc142d8d20
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 
-###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
-###< symfony/mailer ###
-
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
@@ -31,3 +27,8 @@ APP_SECRET=4c983839ebaf1a907c640bfc142d8d20
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL="postgresql://osmuser:osmuser@127.0.0.1:5432/osm_test?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://cspolocne@gmail.com:JozefJozef123JozefJozef@default
+###< symfony/google-mailer ###
